styles/home.css
body{
  border: 1px solid red;
  width: 100%;
  overflow-x: hidden;
}

.container-mission-image{
  /* border: 1px solid green; */
  height: 420px;
}
.mission{
    font-size: 28px;
    line-height: normal;
    font-weight: 800;
    /* border: 1px solid red; */
    margin: 20px 0px 20px 20px;
    position: relative;
    z-index: 1;
    background-color: none;
}

.img{
    position: absolute;
    top: 235px;
    left: 40px;
    z-index: 1;
    width: 100%;
    background-color: none;
}

.container-button{
  display: block;
  align-items: center;
  /* border: 1px solid red; */
}

.container-button button{
  display: block;
  margin: auto;
  font-weight: 500;
  font-size: 20px;
  width: 350px;
  height: 75px;
  border: 2px solid #89DB7B;
  background-color: #89DB7B;
  box-shadow: 0px 0px 5px #89DB7B;
  color: #1E1E1E;
  border-radius: 50px;
}
:hover.container-button button{
  box-shadow: 0px 0px 10px #89DB7B;
}

/* .mission {
    font-size: 20px;
  }
  @media (min-width: 600px) {
    .mission {
      font-size: 24px;
    }
  }
  
  @media (min-width: 800px) {
    .mission {
      font-size: 28px;
    }
  }

  @media (min-width: 1000px) {
    .mission {
      font-size: 32px;
    }
  }   */

